[gd_scene load_steps=7 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]
[ext_resource path="res://Distance Sensor.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 2, 1, 4 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.337255, 0.984314, 1, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1, 2 )

[sub_resource type="BoxShape" id=4]

[node name="Car" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Front Sensor" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.9 )

[node name="Right Sensor" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.819152, 0, -0.573577, 0, 1, 0, 0.573577, 0, 0.819152, -0.9, 0, 1.9 )

[node name="Left Sensor" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.819152, 0, 0.573577, 0, 1, 0, -0.573577, 0, 0.819152, 0.9, 0, 1.9 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="CollisionDetector" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="CollisionDetector"]
transform = Transform( 1.2, 0, 0, 0, 0.5, 0, 0, 0, 2.2, 0, 0, 0 )
shape = SubResource( 4 )

[connection signal="distance_measured" from="Front Sensor" to="." method="_on_Front_Sensor_distance_measured"]
[connection signal="distance_measured" from="Right Sensor" to="." method="_on_Right_Sensor_distance_measured"]
[connection signal="distance_measured" from="Left Sensor" to="." method="_on_Left_Sensor_distance_measured"]
[connection signal="body_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_body_entered"]
